# django-translate-gettext

./: LICENSE  Makefile  README.md  pyproject.toml
django_translate/: apps.py
django_translate/management/commands/: translate.py
django_translate/services/: files.py  transformers.py
django_translate_gettext/: apps.py  constants.py  exceptions.py
django_translate_gettext/management/commands/: translate.py
django_translate_gettext/services/: __init__.py  files.py  models.py  transformers.py  translators.py
